--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBf80Iewp6EnETJH87_IEiu5OFXb5kcb4"></script>
     <script src="./src/index.ts"></script>
   </body>
 </html>
