add google map to html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <body>
+    <div id="map" style="height: 100%;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBf80Iewp6EnETJH87_IEiu5OFXb5kcb4"></script>
     <script src="./src/index.ts"></script>
   </body>
