--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Document</title>
-  </head>
-  <body>
-    <script src="./src/index.ts"></script>
-  </body>
+
+<head>
+  <title>Document</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="./src/index.ts"></script>
+</body>
+
 </html>
